# Project-Omija

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  Makefile  README.md  conftest.py  ontology.md  presentation_guide.md  pyproject.toml  vercel.json
actions/: __init__.py  compute_risk.py  correlate.py  entity_resolver.py  flag_active.py  notify_draft.py  propagate_risk.py  scoring.py
adapter/: __init__.py  base.py  mock.py  stealthmole.py
docs/: claims-and-limitations.md  claude-palantir-live-load-prompt.md  claude-palantir-mcp-lineage-prompt.md  data-collection-playbook.md  data-insertion-guide.md  data-strategy.md  demo-runbook.md  demo-script.md  demo.md  final-demo-alignment.md  finals-data-lineage-upgrade.md  open-data-catalog.md  practical-early-warning-plan.md  presentation-flow.md  reviewer-guide.md  stealthmole-api-integration.md  stealthmole-role-map.md  submission-guide.md
eval/: ground_truth.yaml
registry/: __init__.py  loader.py  suppliers.live.example.yaml  suppliers.yaml
scripts/: capture_demo_screenshots.mjs  collection_plan.py  data_coverage_map.py  data_evidence_brief.py  data_lineage_live.py  demo_e2e.py  early_warning_readiness.py  final_demo_check.py  foundry_action_chain.py  foundry_blast_radius.py  foundry_dataset_upload.py  foundry_demo_report.py  foundry_live_dataset_upload.py  foundry_live_measurement.py  foundry_live_readback.py  foundry_live_schema_dataset_create.py  foundry_live_schema_put.py  foundry_live_sql_measurement.py  foundry_osdk_bootstrap.py  foundry_osdk_smoke.py  foundry_seed.py  import_candidate_signals.py  (+21 more)
(+72 files in other folders)
