[project]
name = "omija"
version = "0.1.0"
description = "Supply-chain Credential Exposure Early Warning — P0-A adapter contract + mock + local validation store"
requires-python = ">=3.11,<3.13"  # OSDK requires <3.13; pin 3.12 (ADR-0004)
dependencies = [
    "httpx>=0.27",
    "pyjwt>=2.8",
    "pyyaml>=6.0",  # registry/suppliers.yaml (P1)
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false  # application, not a distributed package — no build backend needed

[tool.pytest.ini_options]
testpaths = ["tests"]
